--- a/.vscodeignore
+++ b/.vscodeignore
@@ -4,6 +4,7 @@
 .gitignore
 test/**
 node_modules/**
+memory-bank/**
 scripts/**
 src/**
 webpack.*.js
@@ -18,3 +19,4 @@ media/**/*.ai
 !dist/**
 eslint.config.mjs
 .prompts/**
+.roomodes
