--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bc-al-upgradeassistant",
   "displayName": "BC/AL Upgrade Assistant",
   "description": "Assists you in upgrading old or obsolete code and more",
-  "version": "0.0.118",
+  "version": "0.0.119",
   "icon": "media/icon.png",
   "publisher": "ngSoftware",
   "engines": {
@@ -15,7 +15,7 @@
     "onLanguage:al",
     "onLanguage:plaintext"
   ],
-  "main": "./dist/extension.js",
+  "main": "./src/extension.js",
   "contributes": {
     "commands": [
       {
