feat: Implement complete Codeunit 1 transformation support
- Add comprehensive Code Actions for all Codeunit 1 method transformations
- Support for 70+ method transformations across 15 target codeunits
- Automatic code replacement with parameter preservation
- Variable declaration assistance for required codeunits
- Special handling for methods without direct replacements
- Information dialogs with links to Microsoft documentation

New Features:
- Codeunit1TransformationProvider with complete mappings
- Three new commands: transform, copy info, and show info
- Comprehensive test file with all transformation examples
- Enhanced unit tests covering all scenarios
- Complete documentation with usage examples

Supported Codeunits:
- LogInManagement (40) - Company management
- ApplicationSystemConstants (9015) - Version info
- TextManagement (41) - Text formatting
- ReportManagement (44) - Report operations
- LanguageManagement (43) - Language settings
- AutoFormatManagement (45) - Number formatting
- CaptionManagement (42) - Caption translation
- GlobalTriggerManagement (49) - Database triggers
- ConfPersonalizationMgt (9170) - Settings management
- SaaSLogInManagement (50) - SaaS operations
- ExtensionMarketplaceMgmt (2501) - Extension management
- GenericChartMgt (9180) - Chart customization
- EditMSWordReportLayout (9650) - Word layouts
- CueSetup (9701) - Cue styling
- UpgradeManagement (9900) - Upgrade operations
- OnEditInExcel (6710) - Excel integration

Based on Microsoft documentation:
https://learn.microsoft.com/en-us/dynamics365/business-central/dev-itpro/upgrade/transitioning-from-codeunit1

--- a/package.json
+++ b/package.json
@@ -194,6 +194,21 @@
         "title": "Show All Tasks",
         "category": "BC/AL Upgrade Assistant",
         "icon": "$(clear-all)"
+      },
+      {
+        "command": "bc-al-upgradeassistant.transformCodeunit1Method",
+        "title": "Transform Codeunit 1 Method Call",
+        "category": "BC/AL Upgrade Assistant"
+      },
+      {
+        "command": "bc-al-upgradeassistant.copyCodeunit1TransformationInfo",
+        "title": "Copy Codeunit 1 Transformation Info",
+        "category": "BC/AL Upgrade Assistant"
+      },
+      {
+        "command": "bc-al-upgradeassistant.showCodeunit1Info",
+        "title": "Show Codeunit 1 Method Info",
+        "category": "BC/AL Upgrade Assistant"
       }
     ],
     "menus": {
