feat: Add popout functionality for BC/AL references view
- Add ReferencesWebviewProvider for creating popout windows
- Implement full feature parity with sidebar references view
- Add webview HTML/CSS/JS for interactive tree interface
- Support all existing actions: toggle done, add notes, filters
- Add keyboard navigation and accessibility features
- Include VS Code theme integration and proper styling
- Add command registration and menu integration
- Install @vscode/codicons dependency for consistent icons
- Add comprehensive documentation and test file

Features:
- Pop out references to separate window/monitor
- Real-time synchronization with sidebar view
- Multiple popout windows support
- Identical functionality to original tree view
- Keyboard shortcuts and context menus
- Responsive design and proper theming

Files added:
- src/views/referencesWebviewProvider.js
- src/views/webview-content/references.css
- src/views/webview-content/references.js
- docs/references-popout.md
- test/webview-popout.test.js

Files modified:
- package.json (command definition, dependency)
- src/registerCommands.js (popout command)
- src/views/fileReferenceProvider.js (helper method)

--- a/package.json
+++ b/package.json
@@ -194,6 +194,12 @@
         "title": "Show All Tasks",
         "category": "BC/AL Upgrade Assistant",
         "icon": "$(clear-all)"
+      },
+      {
+        "command": "bc-al-upgradeassistant.popoutReferencesView",
+        "title": "Pop Out References View",
+        "category": "BC/AL Upgrade Assistant",
+        "icon": "$(link-external)"
       }
     ],
     "menus": {
@@ -234,6 +240,11 @@
           "command": "bc-al-upgradeassistant.clearTaskFilters",
           "when": "view == bc-al-references || view == bc-al-file-info",
           "group": "navigation@3"
+        },
+        {
+          "command": "bc-al-upgradeassistant.popoutReferencesView",
+          "when": "view == bc-al-references || view == bc-al-file-info",
+          "group": "navigation@4"
         }
       ],
       "view/item/context": [
@@ -851,10 +862,11 @@
     "webpack-obfuscator": "^3.5.1"
   },
   "dependencies": {
+    "@vscode/codicons": "^0.0.36",
     "axios": "^1.6.0",
+    "fastest-levenshtein": "^1.0.16",
     "glob": "^7.2.3",
     "jszip": "^3.10.0",
-    "fastest-levenshtein": "^1.0.16",
     "xml2js": "^0.6.2"
   }
 }
